--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -33,9 +34,6 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "react-horizontal-scrolling-menu": "^0.4.5",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scroll-horizontal": "^1.6.2"
+    "react-page-router": "1.11.10"
   }
 }
