--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --watch",
+    "start": "webpack-dev-server --open --mode development --info-verbosity verbose",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -35,6 +35,9 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "react-page-router": "1.11.10"
+    "page": "^1.11.4",
+    "react-page-router": "1.11.10",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   }
 }
