--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.7.0",
@@ -34,8 +35,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "in-view": "^0.6.1",
-    "in-viewport": "^3.6.0",
-    "react-page-router": "1.11.10"
+    "react-page-router": "1.11.10",
+    "redux": "^4.0.1"
   }
 }
