--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "in-view": "^0.6.1",
-    "react-page-router": "1.11.10"
+    "react-page-router": "1.11.10",
+    "simple-react-store": "^2.1.3",
+    "stickyfilljs": "^2.1.0"
   }
 }
