--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "in-view": "^0.6.1",
-    "react-page-router": "1.11.10",
-    "simple-react-store": "^2.1.3",
-    "stickyfilljs": "^2.1.0"
+    "gsap": "^2.1.2",
+    "noise": "0.0.0",
+    "rand": "0.0.4",
+    "simplex-noise": "^2.4.0",
+    "three": "^0.104.0"
   }
 }
