--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -31,13 +31,14 @@
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "gsap": "^2.1.2",
     "noise": "0.0.0",
     "rand": "0.0.4",
+    "react-page-router": "^1.11.11",
     "simplex-noise": "^2.4.0",
     "three": "^0.104.0"
   }
